--- a/guide/css/main.css
+++ b/guide/css/main.css
@@ -1,3 +1,25 @@
+/*
+	Ignore my weird comment style; this is just here to
+	explain things to those curious enough to check this file.
+	This'll be removed in production.
+*/
+
+/*
+	Taking a risk and hoping this doesn't make shit look weird.
+	- `margin: 0 2.5px` cuz commas after <code> tags look bad.
+	- `display: inline-block` to disallow it from
+		cutting off in the middle of one line
+		and then continuing on the next.
+*/
 .markdown-body code {
-	background-color: #E5E5E5;
+	background-color: #EAEAEA;
+	display: inline-block;
+	padding: 0;
+	margin: 0 2.5px;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+/* `Line-height` so that inline <code> tags don't touch each other. */
+.markdown-body p {
+	line-height: 150%;
 }
