Move all assets to an /assets folder

--- a/guide/assets/scss/main.scss
+++ b/guide/assets/scss/main.scss
@@ -1,3 +1,10 @@
+/*
+	GitHub theme for docute.
+	This file is just here for when
+	I decide to start using SCSS;
+	ignore it for the time being.
+*/
+
 $github-blue: #0366d6;
 $code-string-blue: #183691;
 $light-blue: #f6f8fa;
