--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -12,10 +12,10 @@
 		and then continuing on the next.
 */
 .markdown-body code {
-	background-color: #EAEAEA;
+	background-color: #F0F0F0;
 	display: inline-block;
 	padding: 0;
-	margin: 0 2.5px;
+	margin: 2.5px;
 	border: 1px solid rgba(0, 0, 0, 0.15);
 }
 
