Finished "adding more commands" page
- Also added the "diff" lang file cuz it's kinda useful
- Slightly updated the contributing.md file
- Changed some CSS around
- Added a thing to the to-do list

--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -23,3 +23,9 @@
 .markdown-body p {
 	line-height: 150%;
 }
+
+/* change from purple to red */
+.token.boolean, .token.constant, .token.deleted, .token.number,
+.token.property, .token.symbol, .token.tag {
+	color: #CF3838;
+}
