- Args page, small adjustments every
You thought it was a commit message, but it was me, Dio!

(but really, I'm way too tired to type one up; just look at the diff)

--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -29,3 +29,9 @@
 .token.property, .token.symbol, .token.tag {
 	color: #CF3838;
 }
+
+/* replicate border style w/ box-shadow cuz docute has stupid dropdown menu CSS */
+.nav-list .nav-item-dropdown .dropdown-list {
+	border-width: 0;
+	box-shadow: 0 0 1px 1px #E2E2E2;
+}
