--- a/guide/assets/scss/main.scss
+++ b/guide/assets/scss/main.scss
@@ -1,8 +1,8 @@
 /*
 	GitHub theme for docute.
 	This file is just here for when
-	I decide to start using SCSS;
-	ignore it for the time being.
+	I decide to start using SCSS.
+	Ignore it for the time being.
 */
 
 $github-blue: #0366d6;
