--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -35,3 +35,8 @@
 	border-width: 0;
 	box-shadow: 0 0 1px 1px #E2E2E2;
 }
+
+/* add light border around codeblocks */
+.markdown-body pre {
+	border: 1px solid rgba(0, 0, 0, 0.1);
+}
