--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -4,6 +4,13 @@
 	max-width: 1000px;
 }
 
+/* sidebar */
+
+.sidebar {
+	padding: 30px 0 0;
+	bottom: 40px;
+}
+
 /* regular text blocks */
 
 .markdown-section p {
