--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -5,50 +5,60 @@
 
 /* sidebar */
 .sidebar {
-	bottom: 39px;
+	bottom: 41px;
 	padding: 30px 0 0;
 	border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .sidebar-toggle {
+	color: #42b983;
 	background-color: #fff;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 300px;
-	padding: 0;
+	width: 150px;
+	padding: 12px 10px 8px;
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	border-right: 1px solid rgba(0, 0, 0, 0.1);
+	text-align: left;
+	cursor: pointer;
 }
 
-.sidebar-toggle > div {
-	width: 50%;
-	cursor: pointer;
-	padding: 12px 10px 8px;
+.sidebar-toggle i {
+	width: 100%;
+	font-size: 16px;
 	transition: opacity 0.15s ease-in-out;
 }
 
-.sidebar-toggle > div:hover {
+.sidebar-toggle:hover i {
 	opacity: 0.5;
 }
 
-.sidebar-toggle #theme-toggle-button {
-	text-align: right;
-	font-size: 1.1em;
+#theme-toggle-button {
+	left: 150px;
+	text-align: right;	
 }
 
-body.close .sidebar-toggle > div {
-	margin: 0 0.25em;
+body.close #theme-toggle-button {
+	left: 37px;
 }
 
 @media screen and (max-width: 768px) {
 	.sidebar-toggle {
 		width: auto;
 	}
-
+	
 	body.close .sidebar-toggle {
 		background-color: inherit;
-		width: 300px;
+		width: 150px;
+	}
+
+	body #theme-toggle-button {
+		left: 37px;
+	}
+
+	body.close #theme-toggle-button {
+		left: 150px;
 	}
 }
 
