--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -1,31 +1,79 @@
 /* container width */
-
 .markdown-section {
 	max-width: 1000px;
 }
 
 /* sidebar */
-
 .sidebar {
+	bottom: 41px;
 	padding: 30px 0 0;
-	bottom: 40px;
+	border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.sidebar-toggle {
+	color: #42b983;
+	background-color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	width: 150px;
+	padding: 12px 10px 8px;
+	border-top: 1px solid rgba(0, 0, 0, 0.1);
+	border-right: 1px solid rgba(0, 0, 0, 0.1);
+	text-align: left;
+	cursor: pointer;
+}
+
+.sidebar-toggle i {
+	width: 100%;
+	font-size: 16px;
+	transition: opacity 0.15s ease-in-out;
+}
+
+.sidebar-toggle:hover i {
+	opacity: 0.5;
+}
+
+#theme-toggle-button {
+	left: 150px;
+	text-align: right;	
+}
+
+body.close #theme-toggle-button {
+	left: 37px;
+}
+
+@media screen and (max-width: 768px) {
+	.sidebar-toggle {
+		width: auto;
+	}
+	
+	body.close .sidebar-toggle {
+		background-color: inherit;
+		width: 150px;
+	}
+
+	body #theme-toggle-button {
+		left: 37px;
+	}
+
+	body.close #theme-toggle-button {
+		left: 150px;
+	}
 }
 
 /* regular text blocks */
-
 .markdown-section p {
 	line-height: 170%;
 }
 
 /* lists */
-
 .markdown-section ul li,
 .markdown-section ol li {
 	margin: 0.25em 0;
 }
 
 /* codeblocks and inline code */
-
 .markdown-section pre {
 	padding: 1em;
 	margin: 1em 0;
@@ -50,7 +98,6 @@
 }
 
 /* syntax highlighting */
-
 .token.boolean, .token.constant, .token.deleted, .token.number,
 .token.property, .token.symbol, .token.tag {
 	color: #da3b3b;
@@ -66,7 +113,6 @@
 }
 
 /* helper classes */
-
 .markdown-section p.warning,
 .markdown-section p.danger {
 	border-bottom-right-radius: 2px;
@@ -128,4 +174,3 @@
 .markdown-section p.danger::before {
 	background-color: #f66;
 }
-
