Fix responsive theme toggle fade issue

--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -51,6 +51,7 @@ body.close #theme-toggle-button {
 	body.close .sidebar-toggle {
 		background-color: inherit;
 		width: 150px;
+		transition: none;
 	}
 
 	body #theme-toggle-button {
