Fix sidebar transition issue and invalid CSS

--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -1,6 +1,7 @@
 /* body */
 body {
-	transition: color, background-color 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	transition-property: color, background-color;
 }
 
 /* container width */
@@ -13,7 +14,8 @@ body {
 	bottom: 41px;
 	padding: 30px 0 0;
 	border-right: 1px solid rgba(0, 0, 0, 0.1);
-	transition: color, background-color 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	transition-property: color, background-color, transform;
 }
 
 .sidebar-toggle {
@@ -28,7 +30,8 @@ body {
 	border-right: 1px solid rgba(0, 0, 0, 0.1);
 	text-align: left;
 	cursor: pointer;
-	transition: color, background-color 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	transition-property: color, background-color;
 }
 
 .sidebar-toggle i {
@@ -98,7 +101,8 @@ body.close #theme-toggle-button {
 	line-height: 125%;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 2px;
-	transition: color, background-color 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	transition-property: color, background-color;
 }
 
 .markdown-section code {
@@ -114,7 +118,8 @@ body.close #theme-toggle-button {
 .markdown-section code {
 	font-size: 0.8rem;
 	font-family: 'Droid Sans Mono', monospace;
-	transition: color, background-color 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+	transition-property: color, background-color;
 }
 
 /* syntax highlighting */
