Change color of .inserted
The old color (in my opinion) was a bit too light, giving it the feel of a comment; a darker color would help to make it clearer.

--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -150,7 +150,7 @@ body.close #theme-toggle-button {
 }
 
 .token.inserted {
-	color: #42b983;
+	color: #00ab58;
 	border-width: 0;
 	transition: color 0.2s ease-in-out;
 }
