--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -150,7 +150,7 @@ body.close #theme-toggle-button {
 }
 
 .token.inserted {
-	color: #00ab58;
+	color: #00b311;
 	border-width: 0;
 	transition: color 0.2s ease-in-out;
 }
