--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -287,3 +287,16 @@ body.close #theme-toggle-button {
 	font-size: 0.9em;
 	letter-spacing: 0.5px
 }
+
+.discord-message .discord-mention {
+	color: #7289da;
+	background-color: rgba(114, 137, 218, 0.1);
+	font-weight: 500;
+	padding: 0 1px;
+	cursor: pointer;
+}
+
+.discord-message .discord-mention:hover {
+	color: #fff;
+	background-color: rgba(114, 137, 218, 0.7);
+}
