Set the Discord message bot tag color to white
To prevent it displaying incorrectly on the light theme

--- a/guide/assets/css/main.css
+++ b/guide/assets/css/main.css
@@ -274,6 +274,7 @@ body.close #theme-toggle-button {
 }
 
 .discord-message .author-header .bot-tag {
+	color: #fff;
 	background-color: #7289da;
 	font-size: 0.65em;
 	margin-left: 5px;
