Revert "Fix diff codeblocks syntax highlighting color"
This reverts commit 739c3ece16a3b2a9ecb6d5448f39f21f6a17b429.

--- a/guide/.vuepress/style.styl
+++ b/guide/.vuepress/style.styl
@@ -1,10 +1,10 @@
 // remove when vuepres-theme-yuu gets updated
 .token.deleted {
-	color: #da3b3b !important;
+	color: #da3b3b;
 }
 
 .token.inserted {
-	color: #42b983 !important;
+	color: #42b983;
 }
 
 // temporary; should be adjusted in vuepres-theme-yuu
