feat(styles): Make custom blocks and discord-messages component rounded

--- a/guide/.vuepress/styles/index.styl
+++ b/guide/.vuepress/styles/index.styl
@@ -1,4 +1,12 @@
-// @parent-theme/components/SearchBox.vue
+.custom-block.danger,
+details.custom-block.details,
+.custom-block.tip,
+.custom-block.warning,
+.discord-messages {
+	border-radius: 6px;
+}
+
+// @vuepress/plugin-search/SearchBox.vue
 .navbar .links .search-box input {
 	cursor: pointer;
 	width: 0;
