fix: Use HTML in place of Markdown in <discord-message> components

--- a/guide/.vuepress/styles/index.styl
+++ b/guide/.vuepress/styles/index.styl
@@ -25,3 +25,10 @@ details.custom-block.details,
 		padding-left: 0.25rem !important;
 	}
 }
+
+// vue-discord-message
+.discord-message .discord-message-content code.discord-message-inline-code {
+	color: inherit;
+	font-size: 0.9em;
+	padding: 0.2em;
+}
