refactor: Give the codeblocks highlight lines a light background

--- a/guide/.vuepress/styles/index.styl
+++ b/guide/.vuepress/styles/index.styl
@@ -32,3 +32,8 @@ details.custom-block.details,
 	font-size: 0.9em;
 	padding: 0.2em;
 }
+
+// codeblock highlights
+div[class*="language-"] .highlight-lines .highlighted {
+	background-color: #353b45;
+}
