--- a/guide/.vuepress/styles/palette.scss
+++ b/guide/.vuepress/styles/palette.scss
@@ -1,6 +1,8 @@
 // Discord colors
 $blurple500: #5865f2;
 $blurple560: #4752c4;
+$blurple600: #3c45a5;
+$blurple630: #343b8f;
 
 $textGray: #e5e7eb;
 
