refactor: Change default font

--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,6 +1,11 @@
 @import './palette.scss';
 @import './navbar.scss';
 
+body {
+	font-family: system-ui, -apple-system, 'Segoe UI', Roboto,
+		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+}
+
 .custom-container.danger,
 details.custom-container.details,
 .custom-container.tip,
