feat: Add initial sidebar styles

--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,5 +1,6 @@
 @import './palette.scss';
 @import './navbar.scss';
+@import './sidebar.scss';
 
 body {
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto,
