--- a/guide/.vuepress/styles/palette.scss
+++ b/guide/.vuepress/styles/palette.scss
@@ -1,5 +1,6 @@
 // Discord colors
 $blurple500: #5865f2;
+$blurple530: #505cdc;
 $blurple560: #4752c4;
 $blurple600: #3c45a5;
 $blurple630: #343b8f;
@@ -8,6 +9,7 @@ $textGray: #e5e7eb;
 
 // base colors
 $accentColor: $blurple560;
+$textColor: #374151;
 $tipColor: $blurple560;
 
 // layout
