feat: Add initial home styles

--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,6 +1,7 @@
 @import './palette.scss';
 @import './navbar.scss';
 @import './sidebar.scss';
+@import './home.scss';
 
 body {
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto,
