feat: Add initial content styles

--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -2,6 +2,7 @@
 @import './navbar.scss';
 @import './sidebar.scss';
 @import './home.scss';
+@import './content.scss';
 
 body {
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto,
