feat: Add custom scrollbar styles

--- a/guide/.vuepress/styles/palette.scss
+++ b/guide/.vuepress/styles/palette.scss
@@ -1,4 +1,6 @@
 // Discord colors
+$blurple430: #707bf4;
+$blurple460: #6571f3;
 $blurple500: #5865f2;
 $blurple530: #505cdc;
 $blurple560: #4752c4;
