--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,12 +1,22 @@
 @import './palette.scss';
+@import './mixins.scss';
 @import './navbar.scss';
 @import './sidebar.scss';
 @import './home.scss';
 @import './content.scss';
 
+html {
+	@include customScrollbar(false);
+}
+
 body {
 	font-family: system-ui, -apple-system, 'Segoe UI', Roboto,
 		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+}
+
+h2 {
+	padding-bottom: 0;
+	border-bottom: 0;
 }
 
 .custom-container.danger,
