--- a/guide/.vuepress/styles/palette.scss
+++ b/guide/.vuepress/styles/palette.scss
@@ -1,23 +1,61 @@
-// Discord colors
-$blurple430: #707bf4;
-$blurple460: #6571f3;
-$blurple500: #5865f2;
-$blurple530: #505cdc;
-$blurple560: #4752c4;
-$blurple600: #3c45a5;
-$blurple630: #343b8f;
-
-$textGray: #e5e7eb;
+// code blocks
+$codeLang: 'html' 'js' 'json' 'md' 'sh' 'ts';
 
 // base colors
-$accentColor: $blurple560;
-$textColor: #374151;
-$tipColor: $blurple560;
+:root {
+	// Discord colors
+	--blurple-430: #707bf4;
+	--blurple-460: #6571f3;
+	--blurple-500: #5865f2;
+	--blurple-530: #505cdc;
+	--blurple-560: #4752c4;
+	--blurple-600: #3c45a5;
+	--blurple-630: #343b8f;
 
-// layout
-$contentWidth: 920px;
+	--text-gray: #e5e7eb;
+	--c-headers: #111827;
 
-// code blocks
-$codeBgColor: #282c34;
-$highlightLineBgColor: #353b45;
-$codeLang: 'html' 'js' 'json' 'md' 'sh' 'ts';
+	// Overrides:
+
+	// brand colors
+	--c-brand: var(--blurple-560);
+
+	// text colors
+	--c-text: #374151;
+
+	// custom container colors
+	--c-tip: var(--c-brand);
+
+	// code blocks
+	--code-hl-bg-color: #353b45;
+
+	// font
+	--font-family: system-ui, -apple-system, 'Segoe UI', Roboto,
+		Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+
+	// layout
+	--content-width: 920px;
+}
+
+html.dark {
+	--c-headers: #fff;
+	--c-bg-scrollbar: var(--c-bg);
+
+	// Overrides:
+
+	// brand colors
+	--c-brand: var(--blurple-560);
+
+	// background colors
+	--c-bg: #1d1d1d;
+	--c-bg-sidebar: #191919;
+
+	// text colors
+	--c-text: #9ca3af;
+
+	// custom container colors
+	--c-tip: var(--c-brand);
+
+	// code blocks
+	--code-hl-bg-color: #353b45;
+}
