--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,9 +1,9 @@
 @import './palette.scss';
-@import './mixins.scss';
 @import './navbar.scss';
 @import './sidebar.scss';
 @import './home.scss';
 @import './content.scss';
+@import './mixins/scrollbar.scss';
 
 html {
 	@include customScrollbar(false);
