feat: Add search styles

--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -1,5 +1,6 @@
 @import './palette.scss';
 @import './navbar.scss';
+@import './search.scss';
 @import './sidebar.scss';
 @import './home.scss';
 @import './content.scss';
