fix: Change active search result text color to white

--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -2,6 +2,8 @@
 	--docsearch-text-color: #fff;
 	--docsearch-searchbox-background: var(--blurple-600);
 	--docsearch-searchbox-focus-background: var(--blurple-630);
+
+	--docsearch-hit-active-color: var(--docsearch-text-color);
 }
 
 .DocSearch {
