--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -14,7 +14,34 @@ html.dark .DocSearch {
 
 .DocSearch {
 	&.DocSearch-Button {
+		color: var(--text-gray);
+		height: unset;
+		width: 100%;
+		font-size: 1em;
+		padding: 14px 12px;
+		border-width: 0;
+		box-shadow: none;
 		border-radius: 0.375rem;
+
+		@media screen and (max-width: 719px) {
+			width: unset;
+			background-color: unset;
+		}
+
+		&:hover {
+			background-color: var(--blurple-630);
+		}
+
+		&:hover,
+		&:active,
+		&:focus {
+			box-shadow: none;
+		}
+
+		.DocSearch-Search-Icon {
+			width: 1rem;
+			height: 1rem;
+		}
 
 		.DocSearch-Button-Key {
 			background: unset;
