refactor: Search bar keycap styles

--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -45,6 +45,9 @@ html.dark .DocSearch {
 
 		.DocSearch-Button-Key {
 			background: unset;
+			height: unset;
+			top: 0;
+			padding-bottom: 0;
 		}
 	}
 }
