--- a/guide/.vuepress/styles/content.scss
+++ b/guide/.vuepress/styles/content.scss
@@ -24,21 +24,21 @@
 		color: var(--c-headers);
 	}
 
-	p code {
+	code {
 		color: #2f3136;
 	}
 
-	p a code {
+	a code {
 		color: var(--c-text-accent);
 	}
 }
 
 html.dark .theme-default-content {
-	p code {
+	code {
 		color: #f3f4f6;
 	}
 
-	p a code {
+	a code {
 		color: var(--c-text-accent);
 	}
 }
