--- a/guide/.vuepress/styles/sidebar.scss
+++ b/guide/.vuepress/styles/sidebar.scss
@@ -3,6 +3,7 @@
 @media (max-width: 719px) {
 	.theme-container.sidebar-open .sidebar {
 		top: 0;
+		padding-top: 4rem;
 	}
 }
 
@@ -14,8 +15,18 @@
 	border-right-width: 0;
 	@include customScrollbar();
 
+	.navbar-links {
+		@media screen and (max-width: 719px) {
+			padding: 0.5rem;
+		}
+	}
+
 	& > .sidebar-links {
 		padding: 1.25rem 0.5rem;
+
+		@media screen and (max-width: 719px) {
+			padding: 0.5rem;
+		}
 
 		.sidebar-group {
 			.sidebar-heading {
