fix: Set dark theme toggle button opacity to 1

--- a/guide/.vuepress/styles/navbar.scss
+++ b/guide/.vuepress/styles/navbar.scss
@@ -53,6 +53,7 @@
 	.toggle-dark-button {
 		@include navLink();
 		margin-left: 2rem;
+		opacity: 1;
 
 		@media screen and (max-width: 719px) {
 			margin-left: 0;
