--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -29,3 +29,9 @@ div[class*=language-].line-numbers-mode::after {
 		transition: all 0.2s cubic-bezier(1, 0.5, 0.8, 1);
 	}
 }
+
+.discord-message .discord-message-content code.discord-message-inline-code {
+	color: inherit;
+	font-size: 0.9em;
+	padding: 0.2em;
+}
