refactor: Use themed variables wherever possible

--- a/guide/.vuepress/styles/home.scss
+++ b/guide/.vuepress/styles/home.scss
@@ -3,7 +3,7 @@
 	max-width: unset;
 
 	.hero {
-		background-color: var(--blurple-500);
+		background-color: var(--theme-500);
 		padding: 2rem 0;
 
 		img {
