--- a/guide/.vuepress/styles/mixins/scrollbar.scss
+++ b/guide/.vuepress/styles/mixins/scrollbar.scss
@@ -2,7 +2,7 @@
 	@if $thin {
 		scrollbar-width: thin;
 	}
-	scrollbar-color: var(--blurple-460) var(--c-bg-scrollbar);
+	scrollbar-color: var(--c-bg-scrollbar-thumb) var(--c-bg-scrollbar);
 
 	&::-webkit-scrollbar {
 		@if $thin {
@@ -15,10 +15,10 @@
 	}
 
 	&::-webkit-scrollbar-thumb {
-		background-color: var(--blurple-460);
+		background-color: var(--c-bg-scrollbar-thumb);
 
 		&:hover {
-			background-color: var(--blurple-430);
+			background-color: var(--c-bg-scrollbar-thumb-hover);
 		}
 	}
 
