--- a/guide/.vuepress/styles/search.scss
+++ b/guide/.vuepress/styles/search.scss
@@ -1,15 +1,15 @@
 :root .DocSearch {
 	--docsearch-text-color: #fff;
-	--docsearch-searchbox-background: var(--blurple-600);
-	--docsearch-searchbox-focus-background: var(--blurple-630);
+	--docsearch-searchbox-background: var(--theme-600);
+	--docsearch-searchbox-focus-background: var(--theme-630);
 
 	--docsearch-hit-active-color: var(--docsearch-text-color);
 
-	--docsearch-key-shadow: 0 0 0 1px var(--blurple-560);
+	--docsearch-key-shadow: 0 0 0 1px var(--theme-560);
 }
 
 html.dark .DocSearch {
-	--docsearch-key-shadow: 0 0 0 1px var(--blurple-560);
+	--docsearch-key-shadow: 0 0 0 1px var(--theme-560);
 }
 
 .DocSearch {
@@ -31,7 +31,7 @@ html.dark .DocSearch {
 		}
 
 		&:hover {
-			background-color: var(--blurple-630);
+			background-color: var(--docsearch-searchbox-focus-background);
 		}
 
 		&:hover,
