--- a/guide/.vuepress/styles/index.scss
+++ b/guide/.vuepress/styles/index.scss
@@ -16,6 +16,10 @@ h2 {
 	border-bottom: 0;
 }
 
+.theme-default-content:not(.custom) a:hover {
+	text-decoration: underline;
+}
+
 div[class*=language-].line-numbers-mode::after {
 	border-right-color: rgba(#000, 0.25);
 }
